visual, conexao com backend, incluindo metodos de acesso para resgatar os dados e tambem para atualizar e deletar os dados foram implementados, todos os metodos estão com observables com inscricao e desinscricao quando nao é mais necessario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,15 @@
   <app-menu-topo></app-menu-topo>
   <hr />
   <router-outlet></router-outlet>
-  <hr />
-  <app-portifolio-clientes></app-portifolio-clientes>
-  <app-pre-rodape></app-pre-rodape>
-  <hr />
-  <app-rodape></app-rodape>
+
+  <!--Propaganda zoom in it code-->
+  <div class="texto-centralizado">
+      <a href="https://zoominit.com.br/" target="_blank">
+        <img src="https://zoominit.com.br/zoominitcode-assets/logo.png" alt="ZOOM IN IT CODE LOGO" width="20%" class="img-thumbnail">
+      </a>
+    <div>
+      feito por <a href="https://zoominit.com.br/" target="_blank">ZOOM IN IT CODE</a>
+    </div>
+  </div>
+  <hr class="my-4"/>
 </section>
