--- a/src/app/pre-rodape/pre-rodape.component.html
+++ b/src/app/pre-rodape/pre-rodape.component.html
@@ -1,11 +1,143 @@
 <section>
-  <img src="{{certificado01.img}}" alt="certificado 1"/>
-  <h1>{{ certificado01.titulo }}</h1>
-  <p>{{ certificado01.descricao }}</p>
+  <!--certificado 01-->
+  <div class="jumbotron texto-centralizado">
+    <h3 class="display-4 texto-centralizado">
+      Alterar texto e as imagens do certificado 1
+    </h3>
+    <p class="lead">
+      Titulo
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="certificado01.titulo"
+    />
+    <hr class="my-4" />
+    <p>
+      Descrição
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="certificado01.descricao"
+    />
+    <hr class="my-4" />
+    <p>
+      link imagem
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="certificado01.img"
+    />
+    <hr class="my-4" />
+    <button
+      class="btn btn-primary btn-lg"
+      type="button"
+      id="button-addon2"
+      (click)="setCertificado01(id)"
+      data-toggle="modal"
+      data-target="#modalInformativo"
+    >
+      Salvar alterações
+    </button>
+  </div>
+
+  <!--certificado 02-->
+  <div class="jumbotron texto-centralizado">
+    <h3 class="display-4 texto-centralizado">
+      Alterar texto e as imagens do certificado 2
+    </h3>
+    <p class="lead">
+      Titulo
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="certificado02.titulo"
+    />
+    <hr class="my-4" />
+    <p>
+      Descrição
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="certificado02.descricao"
+    />
+    <hr class="my-4" />
+    <p>
+      link imagem
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="certificado02.img"
+    />
+    <hr class="my-4" />
+    <button
+      class="btn btn-primary btn-lg"
+      type="button"
+      id="button-addon2"
+      (click)="setCertificado02(id)"
+      data-toggle="modal"
+      data-target="#modalInformativo"
+    >
+      Salvar alterações
+    </button>
+  </div>
 </section>
 
-<section>
-  <img src="{{certificado02.img}}" alt="certificado 2"/>
-  <h1>{{ certificado02.titulo }}</h1>
-  <p>{{ certificado02.descricao }}</p>
-</section>
+<!--Modal-->
+<div
+  class="modal fade"
+  id="modalInformativo"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="modalInformativoLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalInformativoLabel">
+          Status da atualizacao:
+        </h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{ status }}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">
+          Fechar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
