--- a/src/app/conteudo-central/orcamento/orcamento.component.html
+++ b/src/app/conteudo-central/orcamento/orcamento.component.html
@@ -1,79 +1,268 @@
-<!--Aviso-->
 <section>
-  <article *ngIf="aviso.ativo === true">
-    <p>{{ aviso.mensagem }}</p>
-  </article>
-</section>
-
-<!--Formulario da pagina-->
-<section>
-  <h1>{{ formulario.titulo }}</h1>
-  <h3>{{ formulario.descricao }}</h3>
-
-  <br />
-
-  <form *ngIf="formulario.envio === false; else formEnvioSucesso">
-    <input type="text" placeholder="Nome" required />
-    <input type="email" placeholder="Email" required />
-    <input type="tel" placeholder="Telefone Fixo" />
-    <input type="tel" placeholder="Celular - Preferência Whatsapp" />
-    <input type="text" placeholder="Empresa" />
-    <p>Fisica</p>
-    <button (click)="tipoPessoa()">
-      Pessoa fisica ou juridica?
-    </button>
-    <p>Juridica *DEFINIR COMO PREFERIDO NO SLIDER TOOGLE</p>
-    <input *ngIf="formulario.pessoa === false" type="text" placeholder="CPF" />
-    <input *ngIf="formulario.pessoa === true" type="text" placeholder="CNPJ" />
-    <select>
-      <option>Segmento</option>
-      <option *ngFor="let segmento of segmentos">{{ segmento }}</option>
-    </select>
-
+  <!--Avisos-->
+  <div class="jumbotron texto-centralizado">
+    <h1 class="display-4">Painel de aviso</h1>
+    <p class="lead">
+      Ligando esse painel, um card irá aparecer para os clientes com o aviso que
+      for cadastrado aqui
+    </p>
+    <hr class="my-4" />
+    <p>Mensagem:</p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="aviso.mensagem"
+    />
     <br />
-
-    <article>
-      <h2>{{ formulario.servicos.titulo }}</h2>
-      <div
-        (click)="escolhaDoServico(i)"
-        *ngFor="let titulo of formulario.servicos.tiposDeServicos; let i = index"
-      >
-        <h4>{{ titulo }}</h4>
-        <div>
-          <img src="{{ formulario.servicos.imgs[i] }}" alt="" width="20%" />
-        </div>
-      </div>
-    </article>
-
-    <br />
-
-    <article>
-      <h2>{{ detalhamento }}</h2>
-      <form>
-        <input type="number" placeholder="Largura" />
-        <input type="number" placeholder="Altura" />
-        <input type="number" placeholder="Quantidade" min="300" />
-        <p>Cor</p>
-        <input type="color" placeholder="Cor" value="000000" />
-        <textarea placeholder="Mensagem"></textarea>
-        <p>Anexar refêrencia da estampa</p><input type="file"/>
-      </form>
-    </article>
-
-    <br />
-
     <button
-      (click)="enviaFormulario()"
-      [routerLink]="['orcamento']"
+      (click)="setAviso(id)"
+      type="button"
+      class="btn btn-primary"
+      [ngClass]="{
+        'btn-primary': aviso.ativo == true,
+        'btn-danger': aviso.ativo == false
+      }"
+      data-toggle="button"
+      aria-pressed="true"
+      autocomplete="off"
+      data-toggle="modal"
+      data-target="#modalInformativo"
     >
-      Enviar pedido de orçamento
+      {{ textBtnAviso }}
     </button>
-  </form>
-
-  <!--Elemento de confirmação do envio do formulário-->
-  <ng-template #formEnvioSucesso>
-    <h3>Já Recebemos seu orçamento!</h3>
-    <p>já ja responderemos de volta, aguarde.</p>
-  </ng-template>
-
+  </div>
 </section>
+
+<!--Formulario-->
+<section>
+  <div class="jumbotron texto-centralizado">
+    <h3 class="display-4 texto-centralizado">
+      Alterar texto e as imagens do formulário de orçamento
+    </h3>
+    <p class="lead">
+      Titulo
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="formulario.titulo"
+    />
+    <hr class="my-4" />
+    <p>
+      Descrição
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="formulario.descricao"
+    />
+    <hr class="my-4" />
+    <p>
+      Titulo dos tipos de serviços
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="formulario.servicos.titulo"
+    />
+    <hr class="my-4" />
+    <p>
+      Lista dos tipos de serviços
+    </p>
+    <!--trackBy evita do for recriar o dom quando alguma string é alterada-->
+    <input
+      *ngFor="
+        let tipoDeServico of formulario.servicos.tiposDeServicos;
+        let i = index;
+        trackBy: trackByIndex;"
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="formulario.servicos.tiposDeServicos[i]"
+    />
+    <hr class="my-4" />
+    <p>
+      Lista link de imagens ilustrativas dos tipos de serviços
+    </p>
+    <!--trackBy evita do for recriar o dom quando alguma string é alterada-->
+    <input
+      *ngFor="let imagem of formulario.servicos.imagens;
+      let i = index;
+      trackBy: trackByIndex"
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="formulario.servicos.imagens[i]"
+    />
+    <hr class="my-4" />
+    <button
+      class="btn btn-primary btn-lg"
+      type="button"
+      id="button-addon2"
+      (click)="setFormulario(id)"
+      data-toggle="modal"
+      data-target="#modalInformativo"
+    >
+      Salvar campos do formulário
+    </button>
+  </div>
+</section>
+
+<!--Segmento-->
+<section>
+  <div class="jumbotron texto-centralizado">
+    <h3 class="display-4">
+      Alterar a lista de segmentos atendidos
+    </h3>
+    <p class="lead">
+      Segmento, digite os segmentos separados por virgula
+    </p>
+    <input
+      *ngFor="let segmento of segmentos;
+      let i = index;
+      trackBy: trackByIndex"
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="segmentos[i]"
+    />
+    <hr class="my-4" />
+    <button
+      class="btn btn-primary btn-lg"
+      type="button"
+      id="button-addon2"
+      (click)="setSegmentos(id)"
+      data-toggle="modal"
+      data-target="#modalInformativo"
+    >
+      Salvar segmentos
+    </button>
+  </div>
+</section>
+
+<!--Pedido Minimo-->
+<section>
+  <div class="jumbotron texto-centralizado">
+    <h3 class="display-4">
+      Alterar o numero de pedido minimo
+    </h3>
+    <p class="lead">
+      coloque SOMENTE numero inteiro, sem virgula ou espaco ou qualquer outro
+      tipo de simbolo
+    </p>
+    <input
+      type="number"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="pedidoMinimo"
+    />
+    <hr class="my-4" />
+    <button
+      class="btn btn-primary btn-lg"
+      type="button"
+      id="button-addon2"
+      (click)="setPedidoMinimo(id)"
+      data-toggle="modal"
+      data-target="#modalInformativo"
+    >
+      Salvar pedido minimo
+    </button>
+  </div>
+</section>
+
+<!--Mensagem de sucesso formulario-->
+<section>
+  <div class="jumbotron texto-centralizado">
+    <h3 class="display-4">
+      Alterar a mensagem de sucesso para o cliente na hora do envio do
+      formulario
+    </h3>
+    <p class="lead">
+      Entre com o titulo e a mensagem para o cliente
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="mensagemDeSucesso.titulo"
+    />
+    <hr class="my-4" />
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto"
+      aria-label="Insira aqui o texto"
+      aria-describedby="button-addon2"
+      [(ngModel)]="mensagemDeSucesso.subtitulo"
+    />
+    <hr class="my-4" />
+    <button
+      class="btn btn-primary btn-lg"
+      type="button"
+      id="button-addon2"
+      (click)="setMensagemSucessoPedidoOrcamento(id)"
+      data-toggle="modal"
+      data-target="#modalInformativo"
+    >
+      Salvar mensagem de sucesso
+    </button>
+  </div>
+</section>
+
+<!--Modal-->
+<div
+  class="modal fade"
+  id="modalInformativo"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="modalInformativoLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalInformativoLabel">
+          Status da atualizacao:
+        </h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{ status }}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">
+          Fechar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
