--- a/src/app/menu-topo/menu-topo.component.html
+++ b/src/app/menu-topo/menu-topo.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <img
       src="{{ logo }}"
